Update sensor template description for clarity

--- a/HA/SunriseAlarm/sensorTemplate.yaml
+++ b/HA/SunriseAlarm/sensorTemplate.yaml
@@ -1,4 +1,5 @@
-# Sensor template for obtaining brightness percentage from Sonoff Mini-DIM-E
+# Sensor template to get the brightness percentage of the Sonoff Mini-DIM-E
+# Add this to Home Assistant configuration.yaml
 template:
   - sensor:
       - name: "Light Brightness - Wifi Smart Switch"
